Integración con Firebase

--- a/src/app/actualiza-component/actualiza-component.html
+++ b/src/app/actualiza-component/actualiza-component.html
@@ -1,12 +1,11 @@
-
+<h1>Actualizar empleado</h1>
 <form>
   Nombre: <input type="text" name="cuadroNombre" [(ngModel)]="cuadroNombre">
   Apellido: <input type="text" name="cuadroApellido" [(ngModel)]="cuadroApellido">
   Cargo: <input type="text" name="cuadroCargo" [(ngModel)]="cuadroCargo">
   Sueldo: <input type="number" name="cuadroSueldo" [(ngModel)]="cuadroSueldo">
   <br>
-  <input type="button" value="Accion" (click)="registrarUsuario()">
+  <br>
+  <input type="button" value="Acción" (click)="actualizarUsuario()">
+  <!-- <input style="margin-left: 10px;" type="button" value="Eliminar usuario" (click)="eliminarUsuario()"> -->
 </form>
-
-
-<button style="text-align: center; margin: 20px" (click)="volverHome()">Volver a Home</button>
